Formatted & Added Blog pages(single) and RSS Feed too

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,6 @@ baseURL = 'http://loonix.in/'
 languageCode = 'en-us'
 title = 'Loonix Ji'
 
+[outputs]
+ home = ['html', 'rss']
+  section = ['html', 'rss']
