--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://hugo.loonix.in/"
+baseURL = "https://friedpotato.in/"
 languageCode = 'en-us'
 title = 'Loonix Ji'
 tableOfContents = true
